Fix close lateral menu on click + page jump

--- a/client/stylesheets/slideout.css
+++ b/client/stylesheets/slideout.css
@@ -1,8 +1,8 @@
 html, body {
   margin: 0;
   padding: 0;
-  width: 100%;
-  height: 100%;
+/*  width: 100%;
+  height: 100%;*/ /* Removed to fix page jump */
 }
 
 html {
@@ -24,6 +24,9 @@ html {
 
 }
 
+.overflow-hidden { /* Trick to fix page jump */
+  overflow:hidden;
+}
 
 
 #slideout-menu {
